Added test title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
 
   <body>
+    <header>
+      <h1>Test</h1>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
   </body>
 
 </html>
