move foobar.html to home dir, add challenge 2a task details to foobar.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Lachlan Gibson</h1>
     </header>
     <main>
-      <a href="./pages/foobar.html">Google FooBar</a>
+      <a href="/foobar">Google FooBar</a>
     </main>
     <footer></footer>
   </body>
