Add the remaining foobar task descriptions

--- a/foobar.html
+++ b/foobar.html
@@ -72,64 +72,283 @@
             <div class="foobar-task-description">
               Bunny Worker Locations<br />
               ======================<br />
+
               <br />
+              In a triangular grid of values each cell can be represented as
+              points (x, y), with x being the distance from the vertical wall,
+              and y being the height from the ground. For example, the value at
+              (1, 1) is 1, the value at (3, 2) is 9, and the value at (2,3) is
+              8. This pattern of numbering continues indefinitely.<br />
+              <br />
+              | 7<br />
+              | 4 8<br />
+              | 2 5 9<br />
+              | 1 3 6 10<br />
+              <br />
+              Write a function solution(x, y) which returns the grid value at
+              the location (x, y). Both x and y will be at least 1 and no
+              greater than 100,000. Since the values can be very large, return
+              your solution as a string representation of the number.<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution(5, 10)<br />
+              Output: 96<br />
+              <br />
+              Input : solution(3, 2)<br />
+              Output: 9
             </div>
           </section>
         </section>
         <section class="foobar-challenge">
           <h2>Challenge 3</h2>
           <section class="foobar-task">
-            <h3>Prepare the Bunnies' Escape</h3>
             <div class="foobar-task-description">
-              Task Description<br />
-              ================<br />
+              Prepare the Bunnies' Escape<br />
+              ===========================<br />
               <br />
+              Write a function solution(map) that generates the length of the
+              shortest path along a rectangular grid from (0,0) to (w-1,h-1),
+              where w is the grid width, h is the grid height and the map is
+              represented as a matrix of 0s and 1s, where 0s are passable space
+              and 1s are impassable walls. The path may remove up to one wall.
+              The path length is the total number of nodes you pass through,
+              counting both the entrance and exit nodes. The starting and ending
+              positions are always passable (0). The map will always be
+              solvable, though you may or may not need to remove a wall. The
+              height and width of the map can be from 2 to 20. Moves can only be
+              made in cardinal directions; no diagonal moves are allowed.<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution([[0, 1, 1, 0], [0, 0, 0, 1], [1, 1, 0, 0], [1, 1,
+              1, 0]])<br />
+              Output: 7<br />
+              <br />
+              Input : solution([[0, 0, 0, 0, 0, 0], [1, 1, 1, 1, 1, 0], [0, 0,
+              0, 0, 0, 0], [0, 1, 1, 1, 1, 1], [0, 1, 1, 1, 1, 1], [0, 0, 0, 0,
+              0, 0]])<br />
+              Output: 11
             </div>
           </section>
           <section class="foobar-task">
-            <h3>The Grandest Staircase Of Them All</h3>
             <div class="foobar-task-description">
-              Task Description<br />
-              ================<br />
+              The Grandest Staircase Of Them All<br />
+              ==================================<br />
               <br />
+              Write a function called solution(n) that takes a positive integer
+              n and returns the number of different staircases that can be built
+              from exactly n bricks. n will always be between 3 and 200
+              (inclusive). Each type of staircase should consist of 2 or more
+              steps with no two steps being at the same height. All steps must
+              contain at least one brick. A step's height is classified as the
+              total amount of bricks that make up that step.<br />
+              <br />
+              For example, when n = 3, you have only 1 choice of how to build
+              the staircase, with the first step having a height of 2 and the
+              second step having a height of 1: (# indicates a brick)<br />
+              <br />
+              #<br />
+              ##<br />
+              21<br />
+              <br />
+              When n = 4, you still only have 1 staircase choice:<br />
+              <br />
+              #<br />
+              #<br />
+              ##<br />
+              31<br />
+              <br />
+              But when n = 5, there are two ways you can build a staircase from
+              the given bricks. The two staircases can have heights (4, 1) or
+              (3, 2), as shown below:<br />
+              <br />
+              #<br />
+              #<br />
+              #<br />
+              ##<br />
+              41<br />
+              <br />
+              #<br />
+              ##<br />
+              ##<br />
+              32<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution(200)<br />
+              Output: 487067745<br />
+              <br />
+              Input : solution(3)<br />
+              Output: 1
             </div>
           </section>
           <section class="foobar-task">
-            <h3>Fuel Injection Perfection</h3>
             <div class="foobar-task-description">
-              Task Description<br />
-              ================<br />
+              Fuel Injection Perfection<br />
+              =========================<br />
               <br />
+              Write a function called solution(n) which takes a positive integer
+              as a string and returns the minimum number of operations needed to
+              transform n to 1. Quantities will not exceed 309 digits long. The
+              three allowed operations are +1, -1 and /2 (if the quantity is
+              even).<br />
+              <br />
+              For example:<br />
+              n = 4 requires two operations: 4 -> 2 -> 1<br />
+              n = 15 requires five operations: 15 -> 16 -> 8 -> 4 -> 2 -> 1<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution('15')<br />
+              Output: 5<br />
+              <br />
+              Input : solution('4')<br />
+              Output: 2
             </div>
           </section>
         </section>
         <section class="foobar-challenge">
           <h2>Challenge 4</h2>
           <section class="foobar-task">
-            <h3>Bringing a Gun to a Trainer Fight</h3>
             <div class="foobar-task-description">
-              Task Description<br />
-              ================<br />
+              Bringing a Gun to a Trainer Fight<br />
+              =================================<br />
               <br />
+              Write a function solution(dimensions, your_position,
+              trainer_position, distance) that gives an array of 2 integers of
+              the width and height of the room, an array of 2 integers of your x
+              and y coordinates in the room, an array of 2 integers of the
+              trainer's x and y coordinates in the room, and returns an integer
+              of the number of distinct directions that you can fire to hit the
+              elite trainer, given the maximum distance that the beam can
+              travel.<br />
+              <br />
+              The room has integer dimensions [1 < x_dim <= 1250, 1 < y_dim <=
+              1250]. You and the elite trainer are both positioned on the
+              integer lattice at different distinct positions (x, y) inside the
+              room such that [0 < x < x_dim, 0 < y < y_dim]. Finally, the
+              maximum distance that the beam can travel before becoming harmless
+              will be given as an integer 1 < distance <= 10000.<br />
+              <br />
+              For example, if you and the elite trainer were positioned in a
+              room with dimensions [3, 2], your_position [1, 1],
+              trainer_position [2, 1], and a maximum shot distance of 4, you
+              could shoot in seven different directions to hit the elite trainer
+              (given as vector bearings from your location): [1, 0], [1, 2], [1,
+              -2], [3, 2], [3, -2], [-3, 2], and [-3, -2]. As specific examples,
+              the shot at bearing [1, 0] is the straight line horizontal shot of
+              distance 1, the shot at bearing [-3, -2] bounces off the left wall
+              and then the bottom wall before hitting the elite trainer with a
+              total shot distance of sqrt(13), and the shot at bearing [1, 2]
+              bounces off just the top wall before hitting the elite trainer
+              with a total shot distance of sqrt(5).<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution([3,2], [1,1], [2,1], 4)<br />
+              Output: 7<br />
+              <br />
+              Input : solution([300,275], [150,150], [185,100], 500)<br />
+              Output: 9
             </div>
           </section>
           <section class="foobar-task">
-            <h3>Free the Bunny Workers</h3>
             <div class="foobar-task-description">
-              Task Description<br />
-              ================<br />
+              Free the Bunny Workers<br />
+              ======================<br />
               <br />
+              Given the number of bunnies available and the number of locks
+              required to open a work room, write a function solution(num_buns,
+              num_required) which returns a specification of how to distribute
+              the keys such that any num_required bunnies can open the locks,
+              but no group of (num_required - 1) bunnies can.<br />
+              <br />
+              Each lock is numbered starting from 0. The keys are numbered the
+              same as the lock they open (so for a duplicate key, the number
+              will repeat, since it opens the same lock). For a given bunny, the
+              keys they get is represented as a sorted list of the numbers for
+              the keys. To cover all of the bunnies, the final solution is
+              represented by a sorted list of each individual bunny's list of
+              keys. Find the lexicographically least such key distribution -
+              that is, the first bunny should have keys sequentially starting
+              from 0.<br />
+              <br />
+              num_buns will always be between 1 and 9, and num_required will
+              always be between 0 and 9 (both inclusive). For example, if you
+              had 3 bunnies and required only 1 of them to open the cell, you
+              would give each bunny the same key such that any of the 3 of them
+              would be able to open it, like so:<br />
+              <br />
+              [<br />
+              [0],<br />
+              [0],<br />
+              [0],<br />
+              ]<br />
+              <br />
+              If you had 2 bunnies and required both of them to open the cell,
+              they would receive different keys (otherwise they wouldn't both
+              actually be required), and your solution would be as follows:<br />
+              <br />
+              [<br />
+              [0],<br />
+              [1],<br />
+              ]<br />
+              <br />
+              Finally, if you had 3 bunnies and required 2 of them to open the
+              cell, then any 2 of the 3 bunnies should have all of the keys
+              necessary to open the cell, but no single bunny would be able to
+              do it. Thus, the solution would be:<br />
+              <br />
+              [<br />
+              [0, 1],<br />
+              [0, 2],<br />
+              [1, 2],<br />
+              ]<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution(4, 4)<br />
+              Output: [[0], [1], [2], [3]]<br />
+              <br />
+              Input : solution(5, 3)<br />
+              Output: [[0, 1, 2, 3, 4, 5], [0, 1, 2, 6, 7, 8], [0, 3, 4, 6, 7,
+              9], [1, 3, 5, 6, 8, 9], [2, 4, 5, 7, 8, 9]]<br />
+              <br />
+              Input : solution(2, 1)<br />
+              Output: [[0], [0]]
             </div>
           </section>
         </section>
         <section class="foobar-challenge">
           <h2>Challenge 5</h2>
           <section class="foobar-task">
-            <h3>Dodge the Lasers!</h3>
             <div class="foobar-task-description">
-              Task Description<br />
-              ================<br />
+              Dodge the Lasers!<br />
+              =================<br />
               <br />
+              Write a function solution(str_n) which, given the string
+              representation of an integer n, returns the sum of
+              (floor(1*sqrt(2)) + floor(2*sqrt(2)) + ... + floor(n*sqrt(2))) as
+              a string. That is, for every number i in the range 1 to n, it adds
+              up all of the integer portions of i*sqrt(2).<br />
+              <br />
+              For example, if str_n was "5", the solution would be calculated
+              as<br />
+              floor(1*sqrt(2)) +<br />
+              floor(2*sqrt(2)) +<br />
+              floor(3*sqrt(2)) +<br />
+              floor(4*sqrt(2)) +<br />
+              floor(5*sqrt(2))<br />
+              = 1+2+4+5+7 = 19<br />
+              so the function would return "19".<br />
+              <br />
+              str_n will be a positive integer between 1 and 10^100, inclusive.
+              Since n can be very large (up to 101 digits!), using just sqrt(2)
+              and a loop won't work. Sometimes, it's easier to take a step back
+              and concentrate not on what you have in front of you, but on what
+              you don't.<br />
+              <br />
+              -- Test cases --<br />
+              Input : solution('77')<br />
+              Output: 4208<br />
+              <br />
+              Input : solution('5')<br />
+              Output: 19
             </div>
           </section>
         </section>
