add image, header and footer to homepage

--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachlan Gibson</title>
+    <link rel="stylesheet" href="./styles/nav.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
   </head>
 
   <body>
     <header>
-      <h1>Lachlan Gibson</h1>
+      <nav>
+        <img src="./images/name_logo.svg" alt="Lachlan Gibson" />
+        <a href="/">Home</a>
+        <a href="/foobar">Google FooBar</a>
+      </nav>
     </header>
     <main>
-      <a href="/foobar">Google FooBar</a>
+      <div id="intro-div">
+        <div>
+          <img
+            src="./images/Lachlan_Gibson.png"
+            alt="An image of Lachlan Gibson"
+          />
+        </div>
+        <div>
+          <p>
+            "fg dfg df gsdfg sdfg sdjf hskjd fshkdf jhsdkfj shdkjf hskdjf
+            hskjdfh sd" - sdfsd
+          </p>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <span>&copy; Copyright 2023 Lachlan Gibson</span>
+      <br />
+      <span>Last updated 9 May 2023</span>
+    </footer>
   </body>
 </html>
