add random quotes to home page

--- a/foobar.html
+++ b/foobar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachlan Gibson - foo.bar</title>
     <link rel="stylesheet" href="../styles/foobar.css" />
+    <link rel="stylesheet" href="./styles/nav.css" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,9 +25,17 @@
   </head>
 
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <div>
+          <img src="./images/logo.svg" alt="Lachlan Gibson" />
+          <span id="lachlan-nav-text">Lachlan Gibson</span>
+        </div>
+        <a href="/">Home</a>
+        <a href="/foobar">Google FooBar</a>
+      </nav>
+    </header>
     <main>
-      <a href="/">Home</a>
       <article>
         <h1>Google FooBar</h1>
         <p>
@@ -49,9 +58,9 @@
 
         <section class="foobar-challenge" id="sec-challenge1">
           <h2>Challenge 1</h2>
-          <div class="table-of-contents toc-layer2">
+          <!-- <div class="table-of-contents toc-layer2">
             <a href="#sec-task-1">Re-ID</a>
-          </div>
+          </div> -->
           <p>
             The first level contained only a single task, titled "Re-ID", which
             involved efficiently generating prime numbers. A task summary,
@@ -137,10 +146,10 @@
         </section>
         <section class="foobar-challenge" id="sec-challenge2">
           <h2>Challenge 2</h2>
-          <div class="table-of-contents toc-layer2">
+          <!-- <div class="table-of-contents toc-layer2">
             <a href="#sec-task-2">Please Pass the Coded Messages</a>
             <a href="#sec-task-3">Bunny Worker Locations</a>
-          </div>
+          </div> -->
           <section class="foobar-task" id="sec-task-2">
             <div class="foobar-task-description">
               Please Pass the Coded Messages<br />
@@ -195,11 +204,11 @@
         </section>
         <section class="foobar-challenge" id="sec-challenge3">
           <h2>Challenge 3</h2>
-          <div class="table-of-contents toc-layer2">
+          <!-- <div class="table-of-contents toc-layer2">
             <a href="#sec-task-4">Prepare the Bunnies' Escape</a>
             <a href="#sec-task-5">The Grandest Staircase Of Them All</a>
             <a href="#sec-task-6">Fuel Injection Perfection</a>
-          </div>
+          </div> -->
           <section class="foobar-task" id="sec-task-4">
             <div class="foobar-task-description">
               Prepare the Bunnies' Escape<br />
@@ -305,10 +314,10 @@
         </section>
         <section class="foobar-challenge" id="sec-challenge4">
           <h2>Challenge 4</h2>
-          <div class="table-of-contents toc-layer2">
+          <!-- <div class="table-of-contents toc-layer2">
             <a href="#sec-task-7">Bringing a Gun to a Trainer Fight</a>
             <a href="#sec-task-8">Free the Bunny Workers</a>
-          </div>
+          </div> -->
           <section class="foobar-task" id="sec-task-7">
             <div class="foobar-task-description">
               Bringing a Gun to a Trainer Fight<br />
@@ -419,9 +428,9 @@
         </section>
         <section class="foobar-challenge" id="sec-challenge5">
           <h2>Challenge 5</h2>
-          <div class="table-of-contents toc-layer2">
+          <!-- <div class="table-of-contents toc-layer2">
             <a href="#sec-task-9">Dodge the Lasers!</a>
-          </div>
+          </div> -->
           <section class="foobar-task" id="sec-task-9">
             <div class="foobar-task-description">
               Dodge the Lasers!<br />
