add icon to nav bar

--- a/foobar.html
+++ b/foobar.html
@@ -7,6 +7,7 @@
     <title>Lachlan Gibson - foo.bar</title>
     <link rel="stylesheet" href="../styles/foobar.css" />
     <link rel="stylesheet" href="./styles/nav.css" />
+    <link rel="icon" href="./images/logo.svg" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
