--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Lachlan Gibson</title>
     <link rel="stylesheet" href="./styles/nav.css" />
     <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="icon" href="./images/logo.svg" />
   </head>
 
   <body>
